--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
 #   数据源基本配置
     username: root
-    password: 123456
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/accountingsystem
+    url: jdbc:mysql://127.0.0.1:3306/accountingsystem?useUnicode=true&characterEncoding=UTF-8
     type: com.alibaba.druid.pool.DruidDataSource
 #   数据源其他配置
     initialSize: 5
@@ -27,7 +27,7 @@ mybatis:
   # 指定全局配置文件位置
   config-location: classpath:mapper/mybatis-config.xml
   # 指定sql映射文件位置
-  mapper-locations: classpath:mapper/mapper/*.xml
+  mapper-locations: classpath:mapper/mapper/*/*.xml
 
 #    schema:
 #      - classpath:sql/department.sql
