--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.thymeleaf.cache=false
 #数据接口文件夹根目录
 dataFileRoot=/Users/gaozhen/userApp/hsdatasource/
-
+#设置cookie过期时间
+server.servlet.session.cookie.max-age=86400s
