--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.thymeleaf.cache=false
 #\u6570\u636E\u63A5\u53E3\u6587\u4EF6\u5939\u6839\u76EE\u5F55
-dataFileRoot=F:/HUNDSUN/hsdatasource/
+dataFileRoot=D:/Develop/JYQS/
 
 #\u8BBE\u7F6Ecookie\u8FC7\u671F\u65F6\u95F4
 server.servlet.session.cookie.max-age=86400s
