--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,21 @@
             <artifactId>junit</artifactId>
         </dependency>
 
+		<!-- quartz 使用了该jar包PlatformTransactionManager类 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+		</dependency>
+		<!-- 该依赖里面有spring对schedule的支持 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
