--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.thymeleaf.cache=false
 #\u6570\u636E\u63A5\u53E3\u6587\u4EF6\u5939\u6839\u76EE\u5F55
 dataFileRoot=F:\\HUNDSUN\\hsdatasource\\
 
 #\u8BBE\u7F6Ecookie\u8FC7\u671F\u65F6\u95F4
 server.servlet.session.cookie.max-age=86400s
+
+
+#thymelea模板配置
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#热部署文件，页面不产生缓存，及时更新
+spring.thymeleaf.cache=false
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
