--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 #\u6570\u636E\u63A5\u53E3\u6587\u4EF6\u5939\u6839\u76EE\u5F55
-dataFileRoot=D:/Develop/JYQS/
+dataFileRoot=F:\\HUNDSUN\\hsdatasource\\
 
 #\u8BBE\u7F6Ecookie\u8FC7\u671F\u65F6\u95F4
 server.servlet.session.cookie.max-age=86400s
 
 
-#thymelea模板配置
+#thymelea\u0123\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-#热部署文件，页面不产生缓存，及时更新
+#\uFFFD\u0232\uFFFD\uFFFD\uFFFD\uFFFD\u013C\uFFFD\uFFFD\uFFFD\u04B3\uFFFD\u6CBB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u68EC\uFFFD\uFFFD\u02B1\uFFFD\uFFFD\uFFFD\uFFFD
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
