修改首页，完成高度问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
-dataFileRoot=/Users/gaozhen/userApp/hsdatasource/
+#\u6570\u636E\u63A5\u53E3\u6587\u4EF6\u5939\u6839\u76EE\u5F55
+dataFileRoot=E:\\Hundsun\\JYQS\\
+
+#\u8BBE\u7F6Ecookie\u8FC7\u671F\u65F6\u95F4
 server.servlet.session.cookie.max-age=86400s
+
+
+#thymelea\u6A21\u677F\u914D\u7F6E
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#\u70ED\u90E8\u7F72\u6587\u4EF6\uFF0C\u9875\u9762\u4E0D\u4EA7\u751F\u7F13\u5B58\uFF0C\u53CA\u65F6\u66F4\u65B0
+spring.thymeleaf.cache=false
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
 
